fix: eighth-round Pine-Java Go-parity fixes (17 items)
H1-H7: PanicError identity, shardToken parent inheritance,
execute(CancellationToken) overload, ResourceAware injection timing,
TransformRedisSet warning/error prefix, ValidationError full response.

M1-M9: anyToString float path, ValidationError for validate methods,
PanicError wrap non-Exception Throwable, /dag format validation,
bodySize longValue, lastReloadDurationNs init, PanicError detailed log,
JSON field order alignment.

L2: fail_on_error type check tightened.